# AIR5051-Team7-FinalProject

skill_client/robomatrix_client/: agent_propmts.py  agent_skills.py  audio2text.py
skill_driver/robomaster_msgs/: CMakeLists.txt  package.xml
skill_driver/robomaster_msgs/msg/: ChassisEsc.msg  ChassisSingleEsc.msg  ServoSingleStatus.msg  ServoStatus.msg
skill_driver/robomaster_ros/: package.xml
skill_driver/robomaster_ros/robomaster_ros/: data_collection.py  teleoperation.py
skill_interface/: CMakeLists.txt
skill_server/: package.xml
skill_server/skill_server/: vla_service.py
skill_server/skill_server/resource/: funcs.py
src/skill_client/: package.xml  setup.cfg  setup.py
src/skill_client/robomatrix_client/: robomatrix_client.py
src/skill_driver/robomaster_msgs/msg/: ChassisAttitute.msg  ChassisIMU.msg  ChassisPosition.msg  GripperStatus.msg  RoboticArmPosition.msg
src/skill_driver/robomaster_ros/: setup.py
src/skill_driver/robomaster_ros/launch/: collect_data.launch.py
src/skill_interface/: package.xml
src/skill_interface/srv/: Vla.srv
src/skill_server/: setup.cfg  setup.py
src/skill_server/skill_server/resource/: inference_multistage.py  utils.py
